<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/toolbar"
        android:background="@color/blue"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miqyas"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:id="@+id/tv_miqyas"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_more"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:layout_marginStart="270dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:layout_below="@id/toolbar">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:columnCount="3"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/iv_gejala"
                        android:layout_width="115dp"
                        android:layout_height="130dp"
                        android:src="@drawable/gejala" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gejala"
                        android:textAlignment="center"
                        android:textColor="#707070"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/iv_jenisStres"
                        android:layout_width="115dp"
                        android:layout_height="130dp"
                        android:src="@drawable/jenisstres" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_stres"
                        android:textAlignment="center"
                        android:textColor="#707070"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/iv_konsultasi"
                        android:layout_width="115dp"
                        android:layout_height="130dp"
                        android:src="@drawable/konsultasi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/konsultasi"
                        android:textAlignment="center"
                        android:textColor="#707070"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </RelativeLayout>
</RelativeLayout>